--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt=br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +10,6 @@
     <link rel="stylesheet" href="src/css/style.css">
     <title>Gerador de Senha</title>
 </head>
-
 <body>
     <div class="meio">
         <div class="topo">
@@ -24,7 +22,7 @@
                 <p class="senha">Gere sua senha e escolha,</p>
                 <div>
                     <button><i class="fa-regular fa-copy"></i></button>
-                    <button><i class="fa-solid fa-arrows-rotate"></i></button>
+                    <button class="update"><i class="fa-solid fa-arrows-rotate"></i></button>
                 </div>
                 
 
