--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt=br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="src/css/style.css">
     <title>Gerador de Senha</title>
 </head>
+
 <body>
     <div class="meio">
         <div class="topo">
@@ -32,7 +34,10 @@
                     <h2>Personalizar</h2>
                 </div>
                 <div class="personalizarBaixo">
-                    <input class="valor" type="range" max="50" min="8">
+                    <div class="top">
+                        <h3>Tamanho: <span>29</span></h3>
+                        <input class="valor" type="range" max="50" min="8">
+                    </div>
                     <div class="personalizarInterno">
                         <div>
                             <input type="checkbox" class="checkbox" id="numeros">
