--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         <div class="principal ">
             <div class="SenhaGerada">
-                <p class="senha">Gere sua senha e escolha,</p>
+                <input type="text" class="senha" placeholder="Gere uma senha forte.">
                 <div>
-                    <button><i class="fa-regular fa-copy"></i></button>
+                    <button class="copy"><i class="fa-regular fa-copy"></i></button>
                     <button class="update"><i class="fa-solid fa-arrows-rotate"></i></button>
                 </div>
                 
@@ -36,7 +36,7 @@
                 <div class="personalizarBaixo">
                     <div class="top">
                         <h3>Tamanho: <span>29</span></h3>
-                        <input class="valor" type="range" max="50" min="8">
+                        <input class="valor" type="range" max="50" min="1">
                     </div>
                     <div class="personalizarInterno">
                         <div>
